# uni

./: .gitignore  Client.java  README.md  Server.java  aws_instance.pem  aws_instance.ppk  message.txt  test.py
2019/201 ENGR/: ass1_lit_review.tex  ass1_lit_review_300447549.docx
2019/201 ENGR/Case Study/: 201_casestudy_HW_300447549.tex  case_redo.tex  outline.json  ref.bib
2019/201 ENGR/Res/: hw2.tex  hw3.docx  hw3.tex
2019/202 ECEN/Ass/: DominoGame.java
2019/203 ECEN/: Draft1.asc  Draft1.op.raw  Draft1.raw
2019/241 NWEN/: nwenfuck.txt
2019/241 NWEN/Ass/NWEN241_A3/databaseCollection/: CMakeLists.txt  dbms.cc  dbms.hh  t34test.cc  t5test.cc  t6test.cc  t7test.cc
2019/241 NWEN/Ass/NWEN241_A4/DbSys/: CMakeLists.txt  dbcmd.cc  dbms2.cc  dbms2.hh  default.csv  lldb.cc  lldb.hh  t4test.cc  vdb.cc  vdb.hh
2019/243 NWEN/: Makefile  nwen-ass4.tex
2020/: dues.md
2020/ECEN301/: Study guide Full Notes shortened.doc
2020/ECEN302/: ECEN302 report template.docx
2020/ECEN315/: ECEN315_Lab_follow_up.pptx  RLocus.html  RLocusGui.fig  bodeCOMP.m  bpass.m  lab1b.slx  rl.m  test.m  test2.m  tim.m  tmptest.m  wk5_1.m  wk5_2.m  wk5_3.m
2021/ECEN425/: L6.md  a3bd.drawio
2021/ENGR222/: ass_tex_template.tex
2021/ENGR489/: Student Intellectual Property Agreement - Appendix B to Intel....docx
tutoring/nwen241_ass1/: Makefile  README.md  a1test  a1test.c  a1test.t4o  a1test.t5o  a1test.t6o  a1test.t7o  base_editor.c  base_editor.h  editor.c  editor.h  minunit.h  t4  t4test.c  t5  t5test.c  t6  t6test.c  t7  t7test.c
work_experience/: RRI_RA_Bullet_Journal.md
(+2015 files in other folders)
